Se agrego una lista no ordenada con el temario del curso

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Introduccion a Git y GitHub</h1>
+    <ul>Que es Git y GitHub</ul>
+    <ul>Que es un repositorio</ul>
+    <ul>Que es un commit</ul>
     <!-- Mi script en JS -->
     <script src="index.js"></script>
 </body>
